// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form Test Form with multiple fields in it 1`] = `
<form
  onSubmit={[Function]}
>
  <input
    name="username"
    onChange={[Function]}
    placeholder="Username"
    value=""
  />
  <input
    name="password"
    onChange={[Function]}
    placeholder="email"
    type="password"
    value=""
  />
  <input
    name="birthday"
    onChange={[Function]}
    type="date"
    value=""
  />
</form>
`;

exports[`Form Test Form with one field in it 1`] = `
<form
  onSubmit={[Function]}
>
  <input
    name="username"
    onChange={[Function]}
    value=""
  />
</form>
`;
